# EnsembleLearning

./: .gitignore  README.md  global_weights.py  local_weights.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: mypy.yml  pylint.yml  ruff.yml  tests.yml
ensemble_learning/: global_weights.py  local_weights.py
examples/: time_series_global_weights.py  time_series_local_weights.py
src/ensemblelearning/: global_weights.py  local_weights.py
test/: test_global_weights.py  test_local_weights.py
tests/: test_global_weights.py  test_local_weights.py
