[project]
name = "EnsembleLearning"
description = "Optimization algorithms for buildung ensemble models"
authors = [
    {name = "Niklas von Moers", email = "niklasvmoers@protonmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.4",
    "cvxpy>=1.3.2",
    "scikit-learn>=1.3.0",
]
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
examples = [
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.2",
    "prophet>=1.1.4",
    "plotly>=5.15.0",
    "pandas>=2.0.3",
]
