[metadata]
name = ensemblelearning
description = Very simple tools for optimal aggregation in ensemble learning
author = Niklas von Moers
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    ensemblelearning
install_requires =
    cvxpy>=1.3.2
    numpy>=1.24.4
    scikit-learn>=1.3.0
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    mypy==1.8.0
    lxml==5.1.0
    pytest==8.0.0
    pytest-cov==4.1.0
    ruff==0.2.1
    tox==4.12.1

[options.package_data]
ensemblelearning = py.typed

